--- a/package.json
+++ b/package.json
@@ -13,23 +13,25 @@
     "build:pwa": "quasar build -m pwa"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "pinia": "^2.1.7",
     "@quasar/extras": "^1.16.11",
+    "axios": "^1.6.8",
+    "lodash": "^4.17.21",
+    "pinia": "^2.1.7",
     "quasar": "^2.15.2",
     "vue": "^3.4.23",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@quasar/app-vite": "^1.8.0",
+    "@types/lodash": "^4.17.0",
+    "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
-    "eslint": "^8.56.0",
-    "eslint-plugin-vue": "^9.25.0",
-    "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.2.5",
-    "@types/node": "^20.12.7",
-    "@quasar/app-vite": "^1.8.0",
     "autoprefixer": "^10.4.19",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-vue": "^9.25.0",
+    "prettier": "^3.2.5",
     "typescript": "^5.4.5"
   },
   "engines": {
