--- a/package.json
+++ b/package.json
@@ -17,22 +17,30 @@
     "axios": "^1.6.8",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
-    "quasar": "^2.15.2",
-    "vue": "^3.4.23",
-    "vue-router": "^4.3.0"
+    "quasar": "^2.15.4",
+    "rollup": "^4.17.2",
+    "vue": "^3.4.26",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@quasar/app-vite": "^1.8.0",
+    "@quasar/app-vite": "^1.8.5",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.12.7",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-vue": "^9.25.0",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "workbox-build": "^7.1.0",
+    "workbox-cacheable-response": "^7.1.0",
+    "workbox-core": "^7.1.0",
+    "workbox-expiration": "^7.1.0",
+    "workbox-precaching": "^7.1.0",
+    "workbox-routing": "^7.1.0",
+    "workbox-strategies": "^7.1.0"
   },
   "engines": {
     "node": "^20 || ^18 || ^16 || ^14.19",
